ci: fix preview bug add run_id

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -15,6 +15,7 @@ jobs:
     needs: check
     runs-on: ubuntu-latest
     steps:
+      - run: echo ${{ secrets.TDESIGN_SURGE_TOKEN }}
       - uses: actions/checkout@v2
         with:
           submodules: recursive
