ci: 增加 create-report actions

--- a/.github/actions/create-report/action.yml
+++ b/.github/actions/create-report/action.yml
@@ -1,5 +1,5 @@
-name: 'Hello World'
-description: 'Greet someone and record the time'
+name: 'create report'
+description: 'create report to wx'
 inputs:
   wxhook:
     description: 'wxhook url'
