--- a/.github/workflows/issues-statistics.yml
+++ b/.github/workflows/issues-statistics.yml
@@ -8,6 +8,7 @@ jobs:
   create-report:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: ./.github/actions/create-report
         with:
           wxhook: ${{ secrets.WX_HOOK_URL }}
