ci: create-report增加输出

--- a/.github/actions/create-report/action.yml
+++ b/.github/actions/create-report/action.yml
@@ -7,6 +7,9 @@ inputs:
   token:
     description: 'github read token'
     required: true
+outputs:
+  time:
+    description: 'complate time'
 runs:
   using: 'node16'
   main: 'dist/index.js'
