chore: 添加测试打印

--- a/.github/workflows/issues-statistics-schedule.yml
+++ b/.github/workflows/issues-statistics-schedule.yml
@@ -8,3 +8,6 @@ on:
 jobs:
   call-statist:
     uses: Tencent/tdesign/.github/workflows/issues-statistics.yml@main
+    secrets:
+      WX_HOOK_URL: ${{ secrets.WX_HOOK_URL }}
+      GIT_TOKEN_L: ${{ secrets.GIT_TOKEN_L }}
