--- a/.github/workflows/issues-statistics.yml
+++ b/.github/workflows/issues-statistics.yml
@@ -3,11 +3,11 @@ name: issues-day-statistics
 
 on:
   workflow_call:
-    # secrets:
-    #   WX_HOOK_URL:
-    #     required: true
-    #   GIT_TOKEN_L:
-    #     required: true
+    secrets:
+      WX_HOOK_URL:
+        required: true
+      GIT_TOKEN_L:
+        required: true
 
 jobs:
   create-report:
