--- a/.github/workflows/issues-statistics-dispatch.yml
+++ b/.github/workflows/issues-statistics-dispatch.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   call-statist:
-    uses: Tencent/tdesign/.github/workflows/issues-statistics.yml@feature/action-report
+    uses: Tencent/tdesign/.github/workflows/issues-statistics.yml@main
     secrets:
       WX_HOOK_URL: ${{ secrets.WX_HOOK_URL }}
       GIT_TOKEN_L: ${{ secrets.GIT_TOKEN_L }}
