ci: 增加help-wanted提示/增加自动关闭issues/将test-build任务打平

--- a/.github/workflows/issues-statistics-schedule.yml
+++ b/.github/workflows/issues-statistics-schedule.yml
@@ -1,9 +1,10 @@
-# 下午 2点05分 触发
+# 国际标准时间+8
 name: issues-statistics-schedule
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: "55 17 * * *"
+    - cron: "0 6 * * *"
 
 jobs:
   call-statist:
