ci: 优化 issue help wanted

--- a/.github/workflows/issue-help-wanted.yml
+++ b/.github/workflows/issue-help-wanted.yml
@@ -1,12 +1,12 @@
 # force copy from tencent/tdesign
-name: Add comment
+name: Issue Help wanted
 on:
   issues:
     types:
       - labeled
 jobs:
   add-comment:
-    if: github.event.label.name == 'help-wanted'
+    if: github.event.label.name == 'help wanted'
     runs-on: ubuntu-latest
     permissions:
       issues: write
