ci(actions): 增加昨日关闭issue和pr的定时任务

--- a/.github/actions/create-report/action.yml
+++ b/.github/actions/create-report/action.yml
@@ -7,6 +7,9 @@ inputs:
   token:
     description: 'github read token'
     required: true
+  type:
+    description: 'run type'
+    required: false
 outputs:
   time:
     description: 'complate time'
