--- a/.github/actions/create-report/package.json
+++ b/.github/actions/create-report/package.json
@@ -16,6 +16,7 @@
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
     "@octokit/rest": "^18.12.0",
-    "@vercel/ncc": "^0.33.1"
+    "@vercel/ncc": "^0.33.1",
+    "dayjs": "^1.10.7"
   }
 }
