--- a/.github/workflows/demo/test-build-demo.yml
+++ b/.github/workflows/demo/test-build-demo.yml
@@ -1,5 +1,6 @@
 # 文件名建议统一为 pull-request.yml 
 # 应用 test-build.yml 的 demo
+# 要求 package.json 提供 lint test site:preview
 
 # name: MAIN_PULL_REQUEST
 
