--- a/.github/workflows/issue-synchronize.temp.yml
+++ b/.github/workflows/issue-synchronize.temp.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: 94dreamer/create-report@main
         with:
           wxhook: ${{ secrets.WX_HOOK_URL }}
-          token: ${{ secrets.GIT_TOKEN_L }}
+          token: ${{ secrets.GITHUB_TOKEN  }}
           type: 'issue'
