--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -42,6 +42,7 @@ jobs:
 
       - run: npm run lint
       - run: npm run test
+       - run: npx codecov --token=${{ secrets.CODECOV_TOKEN }}
 
   site:
     runs-on: ubuntu-latest
