--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -42,7 +42,10 @@ jobs:
 
       - run: npm run lint
       - run: npm run test
-      - run: npx codecov --token=${{ secrets.CODECOV_TOKEN }}
+      # upload report to codecov
+      - uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   site:
     runs-on: ubuntu-latest
