--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,8 @@ name: PUBLISH
 on:
   workflow_call:
     secrets:
+      PERSONAL_TOKEN:
+        required: false
       TDESIGN_SURGE_TOKEN:
         required: true
       TDESIGN_NPM_TOKEN:
@@ -61,9 +63,12 @@ jobs:
         with:
           ref: main
           fetch-depth: 0
+          token: ${{ secrets.PERSONAL_TOKEN }}
           submodules: recursive
       - name: update official website
         run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git status
           git fetch origin
           git merge origin/develop
