--- a/.github/workflows/issue-assignees.temp.yml
+++ b/.github/workflows/issue-assignees.temp.yml
@@ -9,7 +9,7 @@ jobs:
   mark-duplicate:
     runs-on: ubuntu-latest
     steps:
-      - if: ${{ !startsWith(github.event.issue.title, '【新组件】') }}
+      - if: ${{ !startsWith(github.event.issue.title, '【新组件】') && github.event.label.name != 'issueshoot' }}
       - uses: wow-actions/auto-comment@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
