--- a/.github/workflows/issue-synchronize.temp.yml
+++ b/.github/workflows/issue-synchronize.temp.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # https://docs.github.com/cn/developers/webhooks-and-events/webhooks/webhook-events-and-payloads#issues
-      - uses: 94dreamer/create-report@main
+      - uses: TDesignOteam/create-report@main
         with:
           wxhook: ${{ secrets.WX_HOOK_URL }}
           token: ${{ secrets.GIT_TOKEN_L }}
