--- a/.github/workflows/issues-dailyclose-schedule.yml
+++ b/.github/workflows/issues-dailyclose-schedule.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: 94dreamer/create-report@main
+      - uses: TDesignOteam/create-report@main
         with:
           wxhook: ${{ secrets.WX_HOOK_URL }}
           token: ${{ secrets.GIT_TOKEN_L }}
