chore: migrate site build to tdesign main repo (#380)
Co-authored-by: uyarn <uyarnchen@tencent.com>

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "site": "npm run build:components && cd site && npm run build",
     "site:intranet": "npm run build:components && cd site && vite build --mode intranet"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "prismjs": "^1.29.0"
+  }
 }
