--- a/.github/workflows/publish-components.yml
+++ b/.github/workflows/publish-components.yml
@@ -31,6 +31,9 @@ jobs:
         with:
           node-version: 18
           registry-url: "https://registry.npmjs.org"
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 6.0.2
       - run: pnpm install
       - run: cd packages/components && npm run build
       - run: cd packages/components && npm publish
