--- a/site/.eslintrc
+++ b/site/.eslintrc
@@ -3,7 +3,7 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:vue/essential", "standard"],
+  "extends": ["plugin:vue/essential", "standard","prettier"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "parser": "@typescript-eslint/parser",
